# mlops-zoomcamp

./: Dockerfile  pyproject.toml
deployment_attempt/: predict.py  test_pred.py
mlops_jupyter_book/utils/: utils.py
sh-04-deployment/web-service/: Dockerfile
